methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:6: error: not found: value setGroundColor
       if (setGroundColor==Color.green){
           ^